# hospital-management-system

./: .htaccess  Videos - Shortcut.lnk  cashier-display.php  cashier-treasurer-accounting.php  cashier-treasurer-budget.php  cashier-treasurer-cashbank.php  cashier-treasurer-compliance.php  cashier-treasurer-expense.php  cashier-treasurer-revenue.php  cashier.php  cashier2.php  change-password.php  chat.php  clinical-area.php  dashboard.php  delivery-room.php  dialysis.php  doctor-approvals.php  doctor-display.php  doctor.php  er.php  general-supply.php  hr-accounts.php  hr-departments.php  hr-directory.php  hr-login.php  hr-payroll.php  hr-register.php  hr-reports.php  hr-scheduling.php  hr.php  icu.php  index.php  inventory.php  kitchen.php  laboratory-display.php  laboratory.php  login.php  medical-records.php  not-assigned.php  (+22 more)
api/: _cors.php  _db.php  _response.php
autofill-extension/: background.js  content.js  manifest.json
db/: add_purpose_of_visit_column.sql  add_purpose_of_visit_columns.php  check_columns.php  check_pdo.php  migration_return_requests.sql  test_add_columns.php  ttsi_auto.sql
desktop/tauri/: Cargo.toml  tauri.conf.json
doctor/: _auth.php  appointments.php  er.php  index.php  lab-requests.php  lab-results.php  list.php  login.php  logout.php  patients.php  profile.php  register.php
frontend/: README.md  admissions.php  auth-logout.php  auth-store.php  auth.php  bed-management.php  cashier-display.php  cashier-treasurer-accounting.php  cashier-treasurer-budget.php  cashier-treasurer-cashbank.php  cashier-treasurer-compliance.php  chat.php  (+60 more)
(+357 files in other folders)
